--- a/个人简介.html
+++ b/个人简介.html
@@ -44,15 +44,7 @@
 							<li><span class="l">求职意向:web前端</span><span class="r">邮箱:fantasticyh@sina.com</span></li>
 						</ul>
 					</div>
-				</li>
-				<li >工作经历
-					<div class="myzl">
-						<ul>
-							<li><span class="l">2014年7月--2015年3月 工作于北京创客极速科技有限公司</li>
-							<li>2015年6月--2016年3月 工作于东陶（中国）有限公司</li>
-						</ul>
-					</div>
-				</li>
+				</li>				
 				<li>教育学历
 					<div class="myzl">
 						<ul >
@@ -68,6 +60,13 @@
 							<li>熟练掌握pc端、mobile端html+css布局</li>
 							<li>掌握了基本的原生javascript语言</li>
 							<li>能够较好的使用jqurey框架</li>
+						</ul>
+					</div>
+				</li>
+				<li>兴趣爱好
+					<div class="myzl">
+						<ul>
+							<li>IT新产品，运动，郊游，烹饪。</li>							
 						</ul>
 					</div>
 				</li>
