--- a/个人简介.html
+++ b/个人简介.html
@@ -59,7 +59,7 @@
 							<li>熟练掌握ps切图和基本修图</li>
 							<li>熟练掌握pc端、mobile端html+css布局</li>
 							<li>掌握了基本的原生javascript语言</li>
-							<li>能够较好的使用jqurey框架</li>
+							<li>能够较好的使用jquery框架</li>
 						</ul>
 					</div>
 				</li>
@@ -78,7 +78,7 @@
 		<div class="w">
 			<div class="f_con">
 				<p>联系电话:18513852113 <br>
-				 邮箱:fantastiyh@sina.com</p>
+				 邮箱:robin_yuan@sina.com</p>
 				 <div class="weixin" id="weixin"><img src="img/weix.png" alt=""></div>
 				 <img src="img/weix.png" alt="" class="weixinb" id="weixinb" />
 			</div>
