--- a/项目案例.html
+++ b/项目案例.html
@@ -174,7 +174,7 @@
 		<div class="w">
 			<div class="f_con">
 				<p>联系电话:18513852113 <br />
-				 邮箱:fantasticyh@sina.com</p>
+				 邮箱:robin_yuan@sina.com</p>
 				  <div class="weixin" id="weixin"><img src="img/weix.png" alt=""></div>
 				 <img src="img/weix.png" alt="" class="weixinb" id="weixinb" />
 			</div>
